--- a/index3.html
+++ b/index3.html
@@ -14,6 +14,7 @@
         <title>Validación de Password</title>
       </head>
       <body>
+        <h1>Ingresa el password</h1>
         <select id="digit1">
           <option value="1">1</option>
           <option value="2">2</option>
